--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //butter knife
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 }
