Added the three minor fragments to transportation
- Added the three minor fragments integrated into the transportation fragment, with corresponding layout files
- Enabled data binding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ android {
     namespace 'com.comp7506.customplus'
     compileSdk 33
 
+    dataBinding.enabled true
+
     defaultConfig {
         applicationId "com.comp7506.customplus"
         minSdk 16
