--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'org.jsoup:jsoup:1.10.2'
+    //mpchart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
