--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.10.2'
     //mpchart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //cardview
+    implementation "androidx.cardview:cardview:1.0.0"
 }
