--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     def lottieVersion = "3.7.0"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
